# FHAMB-Backend-2

./: .env  .env.prod  .gitignore  README.md  demo.py  main.py  nginx.conf  pyproject.toml
.github/workflows/: main.yml
docker/: .dockerignore  Dockerfile  dev-docker-compose.yml  docker-compose.db.yml  docker-compose.redis.yml  docker-compose.yml  entrypoint.sh  prod-docker-compose.yml
migrations/models/: 0_20250925052020_init.py  0_20251021052707_init.py  1_20250925162327_update.py  1_20251021195906_update.py  2_20250926060921_update.py  2_20251024085204_update.py
src/apps/: __init__.py
src/apps/auth/: __init__.py
src/apps/auth/permisssion/: __init__.py  models.py  routes.py  schemas.py  services.py
src/apps/auth/permssion/: __init__.py  routes.py  services.py
src/apps/auth/user/: __init__.py  models.py  routes.py  schemas.py  services.py
src/apps/file/: models.py  routes.py  services.py
src/apps/public/blog/: __init__.py  models.py  routes.py  schemas.py  services.py
src/apps/public/contact/: __init__.py  models.py  routes.py  schemas.py  services.py
src/apps/public/event/: __init__.py  models.py  routes.py  schemas.py  services.py
src/config/: env.py
src/core/: cache.py  database.py  models.py  routes.py
src/dependencies/middlewares/: logmiddleware.py
src/dependencies/permissions/: base.py
src/enums/: base.py
src/libs/object/: cloudinary.py  s3bucket.py
src/libs/smtp/: mailer.py
src/logs/: logger.py
src/scripts/: aerich.py  seed.py  server.py
src/utilities/: base_model.py  base_service.py  crypto.py  meta.py  sanitizer.py
(+30 files in other folders)
